new explanation for simulations

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -309,7 +309,9 @@ While the first method suffers from the fact that the power-law index only holds
 
 We applied both analytic methods and the semianalytic one to data from KV450, following the separation into tomographic bins as in H18, and computed the ratio between our model for the observed correlation function $\xi_{\pm}^{\rm{obs}}$, and the model correlation function ignoring variations in depth, $\xi_{\pm}$. 
 
-We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generated galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth were generated. In the variable case, we measured the depth of tiles in the KiDS-1000 data \citep{Kuijken:2019} and performed an analogous separation into 10 bins. Each depth bin can then be associated with a tomographic redshift set and the galaxy redshifts were sampled accordingly from one of the 10 distributions. We observed that the relation between depth and effective number density is linear, so we sampled the number density of a pointing from a linear fit of this relation. In the uniform case, redshifts, number densities and shape noise were sampled from the average of these 10 tomographic sets. Finally, we compute the ratio of the average lensing signals from the two mocks. The number of realizations is 2000. Shape noise is omitted. The results can be seen in Fig.~\ref{fig:all_xis}.
+We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generated galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth were generated. In the variable case, the depth of KiDS-1000 data \citep{Kuijken:2019} was binned by magnitude into roughly 20 bins. Afterwards, a linear relation between deph and effective number density was extracted. The KiDS-1000 survey was put on a Healpix grid, and for each pixel the limiting magnitude was calculated. According to this limiting magnitude, an effective number density was assigned, using the linear relation extracted above. Each pixel lies in one of the depth bins defined in this work and can thus be assigned an average source redshift distribution for each tomographic redshift bin.
+
+In the uniform case, redshifts and number densities were sampled from the average of these tomographic sets. Finally, the ratio of the average lensing signals from the two mocks was computed. The number of realizations is 2000. Shape noise is omitted. The results can be seen in Fig.~\ref{fig:all_xis}.
 	\begin{figure}
 	\centering
 	\includegraphics[width=1\textwidth]{images/xis_all1.pdf}
@@ -319,7 +321,7 @@ We compare our models to the results measured from numerical simulations. Using 
 %We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.
 We observe that for high-redshift bins, both analytic methods as well as the semi-analytic one yield consistent results. Due to the redshift-dependent index in the power law of the first analytic method, it is not able to accurately describe the effect for low redshift bins. The second analytic method, however, traces the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect, the analytic method is not able to trace this change.\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}
 
-The simulations and the models seem to be in rough agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. Furthermore, we notice some strong features in the simulations at lower values of $\theta$.  As the noise of the simulated correlation functions increases for decreasing $\theta$,\footnote{The logarithmic bins for the correlation functions were chosen in H17 such that the signal-to-noise ratio is roughly equal for each bin. However, in the simulations we ignore shape-noise, such that our only noise contribution is sample variance, which increases at lower $\theta$.} and we take the ratio of two functions that are subject to noise, these features can be attributed to sample variance. In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations make use of the whole KiDS-1000 data, whereas the models rely on distributions extracted from KV450 data. % Additionlly, the simulations take the full variations in depth into account, which include both scales smaller than one pointing (especially dithering strategies) and scales larger than one pointing.
+The simulations and the models seem to be in relatively good agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. Furthermore, we notice some strong features in the simulations at lower values of $\theta$.  As the noise of the simulated correlation functions increases for decreasing $\theta$,\footnote{The logarithmic bins for the correlation functions were chosen in H17 such that the signal-to-noise ratio is roughly equal for each bin. However, in the simulations we ignore shape-noise, such that our only noise contribution is sample variance, which increases at lower $\theta$.} and we take the ratio of two functions that are subject to noise, these features can be attributed to sample variance. In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations make use of the whole KiDS-1000 data, whereas the models rely on distributions extracted from KV450 data. Additionlly, the simulations take the full variations in depth into account, which include both scales smaller than one pointing (especially chip positions and dithering strategies) and scales larger than one pointing.
 
 An additional difference between the models and simulations is that in the models we assume an infinite footprint, whereas the simulations were performed with the actual KiDS-1000 footprint. In Appendix \ref{sec:expand_eoftheta} we develop a model to extract the correction $\xi_\pm^{ij}/\xi_{\pm}^{ij,\rm{obs}}$ for a specific survey footprint. With this model we can estimate the impacts of a correlated distribution of depth, the sample variance of the depth-distribution and boundary effects. We find that for a quadratic footprint of $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$ with an uncorrelated depth-distribution, finite field effects are negligible.
 
