new explanation for simulations

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -309,9 +309,9 @@ While the first method suffers from the fact that the power-law index only holds
 
 We applied both analytic methods and the semianalytic one to data from KV450, following the separation into tomographic bins as in H18, and computed the ratio between our model for the observed correlation function $\xi_{\pm}^{\rm{obs}}$, and the model correlation function ignoring variations in depth, $\xi_{\pm}$. 
 
-We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generated galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth were generated. In the variable case, the depth of KiDS-1000 data \citep{Kuijken:2019} was binned by magnitude into roughly 20 bins. Afterwards, a linear relation between deph and effective number density was extracted. The KiDS-1000 survey was put on a Healpix grid, and for each pixel the limiting magnitude was calculated. According to this limiting magnitude, an effective number density was assigned, using the linear relation extracted above. Each pixel lies in one of the depth bins defined in this work and can thus be assigned an average source redshift distribution for each tomographic redshift bin.
+We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generated galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth were generated. In the variable case, the depth of KiDS-1000 data \citep{Kuijken:2019} was binned by magnitude into roughly 20 bins. Afterwards, a linear relation between deph and effective number density was extracted. The KiDS-1000 survey was put on a Healpix grid, and for each pixel the limiting magnitude was calculated. According to this limiting magnitude, an effective number density was assigned, using the linear relation extracted above. Each pixel lies in one of the depth bins defined in this work and can thus be assigned an average source redshift distribution for each tomographic redshift bin. In the uniform case, redshifts and number densities were sampled from the average of these tomographic sets. Finally, the ratio of the average lensing signals from the two mocks was computed. The number of realizations is 2000. Shape noise is omitted. 
 
-In the uniform case, redshifts and number densities were sampled from the average of these tomographic sets. Finally, the ratio of the average lensing signals from the two mocks was computed. The number of realizations is 2000. Shape noise is omitted. The results can be seen in Fig.~\ref{fig:all_xis}.
+The results can be seen in Fig.~\ref{fig:all_xis}.
 	\begin{figure}
 	\centering
 	\includegraphics[width=1\textwidth]{images/xis_all1.pdf}
