--- a/cite.bib
+++ b/cite.bib
@@ -462,6 +462,27 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  year = {2018}
 }
 
+@article{2019A&A...624A.134A,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...624A.134A},
+ archiveprefix = {arXiv},
+ author = {{Asgari}, Marika and {Heymans}, Catherine and {Hildebrandt}, Hendrik and
+{Miller}, Lance and {Schneider}, Peter and {Amon}, Alexandra and
+{Choi}, Ami and {Erben}, Thomas and {Georgiou}, Christos and
+{Harnois-Deraps}, Joachim and {Kuijken}, Konrad},
+ doi = {10.1051/0004-6361/201834379},
+ eid = {A134},
+ eprint = {1810.02353},
+ journal = {\aap},
+ keywords = {gravitational lensing: weak, methods: data analysis, methods: statistical, surveys, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Apr},
+ pages = {A134},
+ primaryclass = {astro-ph.CO},
+ title = {{Consistent cosmic shear in the face of systematics: a B-mode analysis of KiDS-450, DES-SV and CFHTLenS}},
+ volume = {624},
+ year = {2019}
+}
+
 @article{2019arXiv190109488S,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.486...52S},
@@ -483,17 +504,19 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
 
 @article{2019arXiv190207439B,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
- adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190207439B},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.489..153B},
  archiveprefix = {arXiv},
  author = {{Blake}, Chris},
- eid = {arXiv:1902.07439},
+ doi = {10.1093/mnras/stz2145},
  eprint = {1902.07439},
- journal = {arXiv e-prints},
- keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
- month = {Feb},
- pages = {arXiv:1902.07439},
+ journal = {\mnras},
+ keywords = {methods: statistical, surveys, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Oct},
+ number = {1},
+ pages = {153-167},
  primaryclass = {astro-ph.CO},
  title = {{Power spectrum modelling of galaxy and radio intensity maps including observational effects}},
+ volume = {489},
  year = {2019}
 }
 
