--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -109,7 +109,7 @@ Fenglin Veteran Hospital, 2 Zhongzheng Rd. Sec. 1, Fenglin Township, Hualien 975
 %-------------------------------------------------------------------
 \section{Introduction}
 The discovery of cosmic shear has provided us with a new and powerful cosmological tool to investigate the standard model of cosmology and to determine its parameters. Contrary to the analysis of the Cosmic Microwave Background (CMB) by \citet{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the local Universe and thus provides an excellent consistency check for the standard model. Current cosmic shear surveys are especially sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ denotes the normalization of the matter power spectrum and $\Omega_{\rm m}$ is the matter density.
-It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Combined analyses of DES and KiDS data \citep{Joudaki:2019,2019A&A...624A.134A} yield even higher tension with the value determined for $S_8$ by the Planck Collaboration. This discrepancy has received a lot of attention \citep{2017MNRAS.471.1259J,2016MNRAS.459..971K}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
+It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Combined analyses of DES and KiDS data \citep{Joudaki:2019} yields even higher tension with the value determined for $S_8$ by the Planck Collaboration\todo{cite marikas new paper here as soon as it is there}. This discrepancy has received a lot of attention \citep{2017MNRAS.471.1259J,2016MNRAS.459..971K}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
 
 For current cosmic shear surveys, the estimated systematic error is of comparable size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary \citep[][hereafter H17]{2017MNRAS.465.1454H}. With surveys like the Large Synoptic Survey Telescope \citep[LSST,][]{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}. %\todo{Citations.. \citet{2017MNRAS.464.1676A} has a few...}
 
@@ -351,7 +351,7 @@ To estimate the B-modes created by this effect, we have extracted the \emph{Comp
 \begin{figure}
 \centering
 \includegraphics[width = \textwidth]{images/ebmodes0p5t72.pdf}
-\caption{Difference in the E-modes (top left) and B-modes (bottom right) between the reference and the observed correlation functions. For comparison: Total E-modes of the reference correlation function $E_n$ (top left) and B-modes measured in the KV450 survey by \citet{2019A&A...624A.134A} $B_n^{\rm{KV450}}$ (bottom right). All E- and B-modes were calculated using the logarithmic COSEBIS in S10 for an angular range of $\theta_{\rm{min}}=0.\!^\prime 5,\,\theta_{\rm{max}}=72\arcmin$.}
+\caption{Difference in the E-modes (top left) and B-modes (bottom right) between the reference and the observed correlation functions. For comparison: Total E-modes of the reference correlation function $E_n$ (top left) and B-modes measured in the KV450 survey by Asgari et al. $B_n^{\rm{KV450}}$ (bottom right). All E- and B-modes were calculated using the logarithmic COSEBIS in S10 for an angular range of $\theta_{\rm{min}}=0.\!^\prime 5,\,\theta_{\rm{max}}=72\arcmin$.}
 \label{fig:bmodes_cosebi}
 \end{figure}
 
@@ -370,7 +370,7 @@ With our semi-analytic model we describe the impacts of varying depth in ground-
 
 Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. The cosmological parameters did not change and the main parameter, $S_8$, is especially robust against this effect. In particular this means that a varying depth can not explain the discrepancy between observations of the local Universe and results from analysis of the CMB.
 
-We have shown that this effect can create B-modes. However, \citet{2019A&A...624A.134A} measured the B-modes of the KV450 survey in the same $\theta$-range. Those B-modes are greater than the ones created by varying depth by a factor of approx.~$50$ and show a completely different pattern, so it is safe to say that the B-modes in the KV450 survey are not created by varying depth. An interesting observation is that the change in E-modes is as big as the created B-modes (compare Fig.~\ref{fig:bmodes_cosebi}). This means that as soon as this effect causes a significant bias in the cosmological parameters, it will also create significant B-modes\footnote{While this is no big surprise, it is not trivial. It could be possible that a systematic effect only creates E-modes and no B-modes, which would be extremely unfortunate as it could bias cosmological parameters without ever being detected by a B-mode analysis.}. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey.
+We have shown that this effect can create B-modes. However, \todo{cite new asgari et al. here as soon as it is on arxiv}\citet{2018arXiv181002353A} measured the B-modes of the KV450 survey in the same $\theta$-range. Those B-modes are greater than the ones created by varying depth by a factor of approx.~$50$ and show a completely different pattern, so it is safe to say that the B-modes in the KV450 survey are not created by varying depth. An interesting observation is that the change in E-modes is as big as the created B-modes (compare Fig.~\ref{fig:bmodes_cosebi}). This means that as soon as this effect causes a significant bias in the cosmological parameters, it will also create significant B-modes\footnote{While this is no big surprise, it is not trivial. It could be possible that a systematic effect only creates E-modes and no B-modes, which would be extremely unfortunate as it could bias cosmological parameters without ever being detected by a B-mode analysis.}. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey.
 
 For next-generation surveys like Euclid, this effect will be significant. Although Euclid is a space-based telescope, the photometric redshift determination will still be done by ground-based telescopes and therefore suffer from the same effects. While we did not yet perform a quantitative study of this effect for Euclid, we are certain that a such a study should be conducted.
 
