--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -1,11 +1,11 @@
-\documentclass[referee]{aa} % for a referee version
+%\documentclass[referee]{aa} % for a referee version
 %\documentclass[onecolumn]{aa} % for a paper on 1 column  
 %\documentclass[longauth]{aa} % for the long lists of affiliations 
 %\documentclass[letter]{aa} % for the letters 
 %\documentclass[bibyear]{aa} % if the references are not structured 
 %                              according to the author-year natbib style
 %
-%\documentclass{aa}  
+\documentclass{aa}  
 \newcommand{\bea}{\begin{eqnarray}}
 \newcommand{\eea}{\end{eqnarray}}
 \newcommand{\ben}{\begin{enumerate}}
@@ -53,7 +53,7 @@
 % with options according to your LaTeX or PDFLaTeX drivers.
 %
 \usepackage{todonotes}
-%\renewcommand{\todo}{\emph}
+\renewcommand{\todo}{\emph}
 \begin{document} 
 
 
@@ -109,7 +109,7 @@ Fenglin Veteran Hospital, 2 Zhongzheng Rd. Sec. 1, Fenglin Township, Hualien 975
 %-------------------------------------------------------------------
 \section{Introduction}
 The discovery of cosmic shear has provided us with a new and powerful cosmological tool to investigate the standard model of cosmology and to determine its parameters. Contrary to the analysis of the Cosmic Microwave Background (CMB) by \citet{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the local Universe and thus provides an excellent consistency check for the standard model. Current cosmic shear surveys are especially sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ denotes the normalization of the matter power spectrum and $\Omega_{\rm m}$ is the matter density.
-It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Combined analyses of DES and KiDS data \citep{Joudaki:2019} yields even higher tension with the value determined for $S_8$ by the Planck Collaboration\todo{cite marikas new paper here as soon as it is there}. This discrepancy has received a lot of attention \citep{2017MNRAS.471.1259J,2016MNRAS.459..971K}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
+It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Combined analyses of DES and KiDS data \citep{Joudaki:2019} yields even higher tension with the value determined for $S_8$ by the Planck Collaboration \todo{we should cite marikas new paper here as soon as it is there}. This discrepancy has received a lot of attention \citep{2017MNRAS.471.1259J,2016MNRAS.459..971K}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
 
 For current cosmic shear surveys, the estimated systematic error is of comparable size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary \citep[][hereafter H17]{2017MNRAS.465.1454H}. With surveys like the Large Synoptic Survey Telescope \citep[LSST,][]{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}. %\todo{Citations.. \citet{2017MNRAS.464.1676A} has a few...}
 
@@ -117,11 +117,11 @@ To check for remaining systematics, a weak lensing signal can be divided into tw
 
 One systematic effect is the variation of depth in a survey. While effects like Galactic extinction or dithering strategies do play a role in every survey, this work focuses on the effects caused by varying atmospheric conditions that are found in ground-based surveys. To first order, this variation can be modelled by a piece-wise constant depth function, which varies from pointing to pointing. In this work we assume the specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}, namely an assembly of $1\,\text{deg}^2$ square fields. 
 
-The depth of a pointing primarily influences the number density as well as the average redshift of galaxies, meaning that a variation in depth is responsible for a correlation between those two quantities (see Fig. \ref{fig:nz_of_meanz}). \todo{I see why you would like to move this further down. However, I feel like this plot would make a nice Fig. 1, that captures the essence of what this paper is trying to analyse -- The effect of an artificial correlation between number density and redshift. I feel like the confusion caused by how exactly the plot is calculated is worth it to not have Fig. 2 (which is not that essential) as new Fig. 1. However, if you still feel like this figure would be better off further down, I will move it.}
+The depth of a pointing primarily influences the number density as well as the average redshift of galaxies, meaning that a variation in depth is responsible for a correlation between those two quantities (see Fig. \ref{fig:nz_of_meanz}). \todo{I see why you would like to move this figure further down. However, I feel like this plot would make a nice Fig. 1, that captures the essence of what this paper is trying to analyse -- The effect of an artificial correlation between number density and redshift. I feel like the confusion caused by how exactly the plot is calculated is worth it to not have Fig. 2 (which is not that essential) as new Fig. 1. However, if you still feel like this figure would be better off further down, I will move it.}
 %
 \begin{figure}
 \centering
-\includegraphics[width=0.7\linewidth]{images/cov_nz_meanz.pdf}
+\includegraphics[width=\linewidth]{images/cov_nz_meanz.pdf}
 \caption{Galaxy number density $N$ and average redshift $\la z\ra$ in the KiDS+VIKING-450 (KV450) survey \citep{Wright:2018} survey in pointings of different depth for each of the five tomographic bins used in H18. Each colour corresponds to one redshift bin of H18, the fainter points denote pointings of shallower depth. Details on how the data were obtained are described in Sec. \ref{sec:xipm_semianalytic}.}
 \label{fig:nz_of_meanz}
 \end{figure}
@@ -154,13 +154,14 @@ P^{\text{obs}}(\b\ell) \equiv \frac{1}{(2\pi)^2}\int \d^2 \ell'\,  \la \gammaoh(
 \end{equation}
 Note that due to the depth-function both the assumptions of homogeneity and isotropy break down, which means that we can neither assume isotropy in the power spectrum, nor can we assume that $\la \gammaoh(\b \ell) \gammaoh {}^*(\b \ell')\ra$ vanishes for $\b\ell\neq\b\ell'$.
 To model a constant depth on each individual pointing $\b \alpha$, we can choose random variables $w_{\b \alpha}$, that only need to satisfy $\langle w_{\b \alpha}\rangle=0$, and parametrize $w(\b\theta)$ as 
-\begin{equation}
-w(\b \theta) = \sum_{\b \alpha \in \mathbb{Z}^2} w_{\b \alpha} \Xi(\b \theta-L\b \alpha)\text{ , with the Box-Function } \Xi(\b \theta) = \begin{cases}
+\begin{align}
+w(\b \theta) = & \sum_{\b \alpha \in \mathbb{Z}^2} w_{\b \alpha} \Xi(\b \theta-L\b \alpha)\text{ , with the Box-Function } \\
+\Xi(\b \theta) = & \begin{cases}
 1 \qquad \b \theta\in \left[-\frac{L}{2},\frac{L}{2}\right]^2 \\
 0 \qquad \text{else}
 \end{cases},
 \label{eq:defweightf}
-\end{equation}
+\end{align}
 where $L$ is the length of one pointing.
 Following the calculations in Appendix \ref{sec:calc of PS}, we derive 
 \begin{equation}
@@ -184,7 +185,8 @@ For a first simple analysis we will assume that a deeper redshift distribution j
 
 Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies per pointing in redshift bins $i$ and $j$ and let $W^i(\b \theta),W^j(\b\theta)$ be the weighting of average shear. The observed correlation functions $\xi^{ij,\text{obs}}_\pm(\theta)$ now change from one of uniform depth, $\xi_\pm^{ij,\rm{uni}}(\theta)$, via \citep[see][]{2002A&A...396....1S}
 \begin{align}
-\xi^{ij,\text{obs}}_\pm(\theta) = & \frac{\la N^i(\bth)N^j(\bthp)\gamma^{i,\rm{obs}}_{\rm t}(\bth)\gamma^{j,\rm{obs}}_{\rm t}(\bthp)\ra }{\la N^i(\bth)N^j(\bthp)\ra} \pm \frac{\la N^i(\bth)N^j(\bthp)\gamma^{i,\rm{obs}}_\times(\bth)\gamma^{j,\rm{obs}}_\times(\bthp)\ra }{\la N^i(\bth)N^j(\bthp)\ra} \nonumber\\
+\xi^{ij,\text{obs}}_\pm(\theta) = & \frac{\la N^i(\bth)N^j(\bthp)\gamma^{i,\rm{obs}}_{\rm t}(\bth)\gamma^{j,\rm{obs}}_{\rm t}(\bthp)\ra }{\la N^i(\bth)N^j(\bthp)\ra} \\
+ & \pm \frac{\la N^i(\bth)N^j(\bthp)\gamma^{i,\rm{obs}}_\times(\bth)\gamma^{j,\rm{obs}}_\times(\bthp)\ra }{\la N^i(\bth)N^j(\bthp)\ra} \nonumber\\
  = & \frac{\la N^i(\bth)N^j(\bthp)W^i(\bth)W^j(\bthp)\ra}{\la N^i(\bth)N^j(\bthp)\ra} \xi_{\pm}^{ij,\rm{uni}}(\theta) \, ,
  \label{eq:xipmblub1}
  \end{align}
@@ -193,7 +195,7 @@ Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies pe
  
 \begin{figure}
  \centering
- \includegraphics[width=0.5\textwidth]{images/eoftheta.pdf}
+ \includegraphics[width=0.9\linewidth]{images/eoftheta.pdf}
  \caption{Probability $E(\theta)$ that a random pair of galaxies of distance $\theta$ lie in the same $1\deg ^2$ pointing.}
  \label{fig:eoftheta_lin}
 \end{figure}
@@ -201,12 +203,15 @@ Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies pe
 To compute the modified shear correlation functions, we parametrize the number densities \linebreak$N^{i}(\b \theta)=\la N^{i} \ra [1+n^{i}(\b \theta)]$ and the weight $W^{i}(\b \theta)=1+w^{i}(\b \theta)$ and, as in Eq. \eqref{eq:defweightf}, interpret $n^{i}(\b \theta)$ as a function with average $\la n^{i} \ra = 0$ that is constant on each pointing. We can see that $\la n^i(\bth)n^j(\bthp)\ra = E(\theta)\la n^i(\bth)n^j(\bth)\ra = E(\theta)\la n^i n^j \ra$ holds and compute:
 \begin{align}
 &\frac{\la N^i(\bth)N^j(\bthp)W^i(\bth)W^j(\bthp)\ra}{\la N^i\ra \la N^j\ra } \nonumber\\
-&\qquad =  1 + \la n^iw^i\ra + \la n^j w^j\ra + E(\theta)\left[ \la n^in^j\ra + \la n^i w^j \ra  + \la n^jw^i\ra + \la w^iw^j\ra + \la n^in^jw^i\ra + \la n^in^jw^j\ra + \la n^iw^iw^j\ra \right. \nonumber\\
-&\qquad\quad \left. + \la n^jw^iw^j\ra + \la n^in^jw^iw^j\ra  \right] \, .
+&\qquad =  1 + \la n^iw^i\ra + \la n^j w^j\ra + E(\theta)\left[ \la n^in^j\ra + \la n^i w^j \ra  + \la n^jw^i\ra \right. \nonumber\\
+& \qquad\quad + \la w^iw^j\ra + \la n^in^jw^i\ra + \la n^in^jw^j\ra + \la n^iw^iw^j\ra 
++ \la n^jw^iw^j\ra \nonumber\\
+& \qquad\quad\left.+ \la n^in^jw^iw^j\ra  \right] \, .
  \end{align}
 Ignoring correlations higher than second order in $n^i$ and $w^i$,\footnote{It is not inherently obvious that this is a valid assumption. However, after performing calculations with and without higher order correlations, the highest difference between the outcomes of both equations was less then $5\times 10^{-4}$.} and performing the same calculation for the denominator of Eq.\,\eqref{eq:xipmblub1}, we get
  \begin{align}
- \xi^{ij,\rm{obs}}_\pm(\theta) = \frac{1 + \la n^iw^i\ra + \la n^jw^j\ra + E(\theta)\left[\la n^in^j\ra + \la n^iw^j\ra + \la n^j w^i\ra + \la w^iw^j\ra\right]}{1+E(\theta)\la n^i n^j\ra }\xi^{ij,\rm{uni}}_\pm (\theta) \, .
+ \xi^{ij,\rm{obs}}_\pm(\theta) = & \left[ 1 + \la n^iw^i\ra + \la n^jw^j\ra + E(\theta)\left(\la n^in^j\ra + \la n^iw^j\ra \right.\right. \nonumber\\
+ &\left.\left. + \la n^j w^i\ra + \la w^iw^j\ra\right)\right]\, \left[1+E(\theta)\la n^i n^j\ra \right]\inv\xi^{ij,\rm{uni}}_\pm (\theta) \, .
  \end{align}
  A model correlation function for a cosmic shear survey is usually calculated by taking the average redshift distribution of a redshift bin, weighted by the number density.
  Ignoring that the depth is correlated on scales of one pointing (here at $\theta \leq \sqrt{2}^\circ$) is equivalent to setting $E(\theta)\equiv 0$. Note that there is still a correlation between $N$ and $W$ for the same galaxy.
@@ -215,10 +220,11 @@ Ignoring correlations higher than second order in $n^i$ and $w^i$,\footnote{It i
 \begin{equation}
 \xi_\pm^{ij}(\theta) = \left(1+\la n^iw^i\ra + \la n^jw^j\ra \right)\xi_\pm^{ij,\rm{uni}}(\theta)\, .
 \end{equation}
-When an observer now calculates the model correlation functions $\xi^{ij}_\pm$ without accounting for varying depth between pointings, the ratio between modelled and observed correlation functions becomes: \begin{equation}
-\frac{\xi^{ij}_\pm(\theta)}{\xi_\pm^{ij,\rm{obs}}(\theta)} \approx \frac{1+\la n^iw^i\ra+\la n^jw^j\ra + E(\theta)\la n^in^j\ra}{1 + \la n^iw^i\ra + \la n^jw^j\ra + E(\theta)\left[\la n^in^j\ra + \la n^iw^j\ra + \la n^j w^i\ra + \la w^iw^j\ra\right]}
+When an observer now calculates the model correlation functions $\xi^{ij}_\pm$ without accounting for varying depth between pointings, the ratio between modelled and observed correlation functions becomes: \begin{align}
+\frac{\xi^{ij}_\pm(\theta)}{\xi_\pm^{ij,\rm{obs}}(\theta)} \approx &  \left[1+\la n^iw^i\ra +\la n^jw^j\ra + E(\theta)\la n^in^j\ra\right]\,\left[1 + \la n^iw^i\ra \right. \nonumber\\
+ & \left.+ \la n^jw^j\ra + E(\theta)\left(\la n^in^j\ra + \la n^iw^j\ra + \la n^j w^i\ra + \la w^iw^j\ra\right)\right]
 \, .
-\end{equation}
+\end{align}
 It is interesting to note that $\xi^{ij}_\pm = \xi_\pm^{ij,\rm{obs}}$ holds wherever $E(\theta)=0$, so we expect the observed and the modelled correlation functions to be equivalent on scales where the depth is uncorrelated. 
 
 
@@ -246,7 +252,7 @@ Using \eqref{eq:xipm-pkappa}, we can compute the model correlation functions $\x
 \xi_\pm^{ij,\rm{obs}}(\theta) = \frac{\sum_{m,n} \mathcal{P}_{mn}^{ij}(\theta)\,\xi_{\pm,mn}^{ij}(\theta)}{\sum_{m,n} \mathcal{P}_{mn}^{ij}(\theta)}\, ,
 \label{eq:def_xiobs}
 \]
-where $\mathcal{P}_{mn}^{ij}$ is a weighting of the correlation functions, which has to be proportional to the probability that a galaxy pair of separation $\theta$ comes from percentiles $m$ and $n$\todo{We \textit{could} completely scratch this derivation and just point to the Appendix; I personally feel that this approach is more intuitive than the more mathematical one of the appendix, but if the paper gets too long we definitely do not need two methods to derive the same equation.}. In this analysis, we will assume an infinitely large survey footprint with an uncorrelated distribution of depth. We will later discuss the validity of these assumptions as well as possible mitigation strategies. 
+where $\mathcal{P}_{mn}^{ij}$ is a weighting of the correlation functions, which has to be proportional to the probability that a galaxy pair of separation $\theta$ comes from percentiles $m$ and $n$ \todo{We \textit{could} completely scratch this derivation and just point to the Appendix; I personally feel that this approach is more intuitive than the more mathematical one of the appendix, but if the paper gets too long we definitely do not need two methods to derive the same equation.}. In this analysis, we will assume an infinitely large survey footprint with an uncorrelated distribution of depth. We will later discuss the validity of these assumptions as well as possible mitigation strategies. 
 
 To calculate $\mathcal{P}_{mn}^{ij}(\theta)$ we imagine two arbitrary (infinitesimally small) surface elements $\d^2\b\theta_1,\d^2\b\theta_2$ of separation $\theta$ on the sky. For the case $m\neq n$ we know that a pair of galaxies contributing to $\mathcal{P}_{mn}^{ij}(\theta)$ has to lie in different pointings, else they would automatically be of the same percentile. The probability that the imagined surface elements are within different pointings is $[1-E(\theta)]$. Furthermore, the first element $\d^2\b\theta_1$ has to lie in percentile $m$, the probability of which is $1/10$. The pointing of the second element $\d^2\b\theta_2$ has to be of percentile $n$; the probability of that is also equal to $1/10$. The probability that a galaxy pair populates those surface elements is proportional to the weighted number of galaxies $N_m^i,N_n^j$. We get for $n\neq m$: \[
 \mathcal{P}_{mn}^{ij}(\theta) = [1-E(\theta)]\frac{1}{100} N_m^i N_n^j\, .
@@ -276,13 +282,14 @@ If we want to compute this for all 5 redshift bins of the KV450-survey, this for
 N^i\equiv\sum_m N_m^i\, , \qquad \mathcal{L}^i(\chi) = \frac{\sum_m N_m^i \mathcal{L}_m^i(\chi)}{\sum_m N_m^i} \, .
 \]
 If we define $\xi^{ij}_\pm$ as the correlation functions between the average comoving distance distributions $\mathcal{L}^i(\chi)$ and $\mathcal{L}^j(\chi)$, we find: \begin{align}
-\sum_{m,n}N_m^iN_n^j\xi^{ij}_{\pm,mn} = & \, \frac{9 H_0^4\Omega_{\rm m}^2}{4c^4} \sum_{m,n} N_m^i N_n^j \int_0^\infty \frac{{\rm d}\ell\,\ell}{2\pi}\, J_{0,4}(\ell\theta) \int_0^{\chi_{\rm{H}}} \frac{{\rm d}\chi}{a^2(\chi)}\, P_\delta\left(\frac{\ell}{f_K(\chi)},\chi\right) \\
-& \int_\chi^{\chi_{\rm{H}}} {\rm d}\chi' \, \mathcal{L}^i_m(\chi') \, \frac{f_K(\chi'-\chi)}{f_K(\chi')}
-\int_\chi^{\chi_{\rm{H}}} {\rm d}\chi'' \, \mathcal{L}^j_n(\chi'') \, \frac{f_K(\chi''-\chi)}{f_K(\chi'')} \\
- = & \,N^i N^j \, \frac{9 H_0^4\Omega_{\rm m}^2}{4c^4} \int_0^\infty \frac{{\rm d}\ell\,\ell}{2\pi}\, J_{0,4}(\ell\theta) \int_0^{\chi_{\rm{H}}} \frac{{\rm d}\chi}{a^2(\chi)}\, P_\delta\left(\frac{\ell}{f_K(\chi)},\chi\right) \\
-& \int_\chi^{\chi_{\rm{H}}} {\rm d}\chi' \, \frac{\sum_m N_m^i \mathcal{L}^i_m(\chi')}{N^i} \, \frac{f_K(\chi'-\chi)}{f_K(\chi')}
-\int_\chi^{\chi_{\rm{H}}} {\rm d}\chi'' \, \frac{\sum_n N_n^j \mathcal{L}^j_n(\chi'')}{N^j}  \, \frac{f_K(\chi''-\chi)}{f_K(\chi'')} \\
- = & \, N^iN^j\xi^{ij}_\pm\, .
+& \sum_{m,n}N_m^iN_n^j\xi^{ij}_{\pm,mn} = \, \frac{9 H_0^4\Omega_{\rm m}^2}{4c^4} \sum_{m,n} N_m^i N_n^j \int_0^\infty \frac{{\rm d}\ell\,\ell}{2\pi}\, J_{0,4}(\ell\theta) \nonumber\\
+& \qquad \int_0^{\chi_{\rm{H}}} \frac{{\rm d}\chi}{a^2(\chi)}\, P_\delta\left(\frac{\ell}{f_K(\chi)},\chi\right)
+\int_\chi^{\chi_{\rm{H}}} {\rm d}\chi' \, \mathcal{L}^i_m(\chi') \, \frac{f_K(\chi'-\chi)}{f_K(\chi')} \nonumber\\
+& \qquad \int_\chi^{\chi_{\rm{H}}} {\rm d}\chi'' \, \mathcal{L}^j_n(\chi'') \, \frac{f_K(\chi''-\chi)}{f_K(\chi'')} \nonumber\\
+ & \quad =  \,N^i N^j \, \frac{9 H_0^4\Omega_{\rm m}^2}{4c^4} \int_0^\infty \frac{{\rm d}\ell\,\ell}{2\pi}\, J_{0,4}(\ell\theta) \int_0^{\chi_{\rm{H}}} \frac{{\rm d}\chi}{a^2(\chi)}\, P_\delta\left(\frac{\ell}{f_K(\chi)},\chi\right) \nonumber\\
+& \qquad \int_\chi^{\chi_{\rm{H}}} {\rm d}\chi' \, \frac{\sum_m N_m^i \mathcal{L}^i_m(\chi')}{N^i} \, \frac{f_K(\chi'-\chi)}{f_K(\chi')} \nonumber\\
+& \qquad \int_\chi^{\chi_{\rm{H}}} {\rm d}\chi'' \, \frac{\sum_n N_n^j \mathcal{L}^j_n(\chi'')}{N^j}  \, \frac{f_K(\chi''-\chi)}{f_K(\chi'')} \nonumber\\
+& \quad =  \, N^iN^j\xi^{ij}_\pm\, .
 \end{align}
 Consequently, we can apply this to \eqref{eq:correctionfunction1}, yielding
 \begin{equation}
@@ -312,12 +319,12 @@ We applied both analytic methods and the semianalytic one to data from KV450, fo
 We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generated galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth were generated. In the variable case, the depth of KiDS-1000 data \citep{Kuijken:2019} was binned by magnitude into roughly 20 bins. Afterwards, a linear relation between depth and effective number density was extracted. The KiDS-1000 survey was put on a Healpix grid, and for each pixel the limiting magnitude was calculated. According to this limiting magnitude, an effective number density was assigned, using the linear relation extracted above. For each pixel and each tomographic redshift bin we used the same limiting magnitude to assign an average source redshift distribution from the ones extracted in this work. In the uniform case, redshifts and number densities were sampled from the average of these tomographic sets. Finally, the ratio of the average lensing signals from the two mocks was computed. The number of realizations is 2000. Shape noise is omitted. 
 
 The results can be seen in Fig.~\ref{fig:all_xis}.
-	\begin{figure}
+	\begin{figure*}
 	\centering
-	\includegraphics[width=1\textwidth]{images/xis_all1.pdf}
+	\includegraphics[width=0.9\linewidth]{images/xis_all1.pdf}
 	\caption{The ratio of observed to modelled correlation functions for the analytic methods (green), the semi-analytic method (blue) and the numerical simulations (red) for a cross-correlation of all redshift bins. The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$.}
 	\label{fig:all_xis}
-	\end{figure}
+	\end{figure*}
 %We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.
 We observe that for high-redshift bins, both analytic methods as well as the semi-analytic one yield consistent results. Due to the redshift-dependent index in the power law of the first analytic method, it is not able to accurately describe the effect for low redshift bins. The second analytic method, however, traces the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect, the analytic method is not able to trace this change.\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}
 
@@ -327,33 +334,33 @@ An additional difference between the models and simulations is that in the model
 
 As the next step we chose a fiducial cosmology $\b \Phi$ and computed reference correlation functions $\xi_\pm^{ij}(\theta,\b\Phi)$ for each pair of redshift bins $i,j$. Using our semi-analytic model in Sect.~\ref{sec:xipm_semianalytic}, we derived the observed correlation function $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ from those. Then we ran a Markov-Chain Monte Carlo simulation to check for the resulting bias in the inferred cosmological parameters, using the covariance-matrix computed in H18. As our main interest lies in the $\Omega_{\rm m}$ - $\sigma_8$ combination, we restricted our analysis to those two parameters. As can be seen in Fig.~\ref{fig:mcmc_kids}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divided our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. As can be seen in Fig.~\ref{fig:mcmc_euclid}, here the impact on both $\Omega_{\rm m}$ and $\sigma_8$ is significant. Conveniently it seems that the parameter $S_8$ is considerably more robust against this effect.
 
-\begin{figure}
-\begin{subfigure}{0.5\textwidth}
+\begin{figure*}
+\begin{subfigure}{0.45\textwidth}
 	\includegraphics[width=\textwidth]{images/mcmc_kids.pdf}
 	\caption{Bias for a KiDS-like Survey.}
 	\label{fig:mcmc_kids}
 \end{subfigure}
-\begin{subfigure}{0.5\textwidth}
+\begin{subfigure}{0.45\textwidth}
 	\includegraphics[width=\textwidth]{images/mcmc_euclid.pdf}
 	\caption{Bias for a 'Euclid-like' Survey.}
 	\label{fig:mcmc_euclid}
 \end{subfigure}
 \caption{Estimation of the bias caused by a variation of depth in a cosmic shear survey. Both simulations were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
-\end{figure} 
+\end{figure*} 
 
 Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependence on the cosmology, which can be seen in Figure \ref{fig:comparecosmo}.
 
 To estimate the B-modes created by this effect, we have extracted the \emph{Complete Orthogonal Sets of E- and B-Mode Integrals} (COSEBIS, compare S10)
 %, once of a reference set of correlation functions, to estimate numerical inaccuracies,\footnote{For a reference correlation function the B-Modes should be consistent with zero.} and then 
- for the correlation functions $\xi_\pm^{\rm{obs}}$ that have been modified under the semi-analytic model. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield the significant detection of B-modes.\todo{add reference in the figure as soon as marika's paper is on arxiv}
+ for the correlation functions $\xi_\pm^{\rm{obs}}$ that have been modified under the semi-analytic model. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield the significant detection of B-modes.\todo{I will add a reference in the figure as soon as marika's paper is on arxiv}
 
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width = \textwidth]{images/ebmodes0p5t72.pdf}
+\includegraphics[width = 0.9\linewidth]{images/ebmodes0p5t72.pdf}
 \caption{Difference in the E-modes (top left) and B-modes (bottom right) between the reference and the observed correlation functions. For comparison: Total E-modes of the reference correlation function $E_n$ (top left) and B-modes measured in the KV450 survey by Asgari et al. $B_n^{\rm{KV450}}$ (bottom right). All E- and B-modes were calculated using the logarithmic COSEBIS in S10 for an angular range of $\theta_{\rm{min}}=0.\!^\prime 5,\,\theta_{\rm{max}}=72\arcmin$.}
 \label{fig:bmodes_cosebi}
-\end{figure}
+\end{figure*}
 
 %-------------------------------------------------------------------
 
@@ -370,7 +377,7 @@ With our semi-analytic model we describe the impacts of varying depth in ground-
 
 Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. The cosmological parameters did not change and the main parameter, $S_8$, is especially robust against this effect. In particular this means that a varying depth can not explain the discrepancy between observations of the local Universe and results from analysis of the CMB.
 
-We have shown that this effect can create B-modes. However, \todo{cite new asgari et al. here as soon as it is on arxiv}\citet{2018arXiv181002353A} measured the B-modes of the KV450 survey in the same $\theta$-range. Those B-modes are greater than the ones created by varying depth by a factor of approx.~$50$ and show a completely different pattern, so it is safe to say that the B-modes in the KV450 survey are not created by varying depth. An interesting observation is that the change in E-modes is as big as the created B-modes (compare Fig.~\ref{fig:bmodes_cosebi}). This means that as soon as this effect causes a significant bias in the cosmological parameters, it will also create significant B-modes\footnote{While this is no big surprise, it is not trivial. It could be possible that a systematic effect only creates E-modes and no B-modes, which would be extremely unfortunate as it could bias cosmological parameters without ever being detected by a B-mode analysis.}. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey.
+We have shown that this effect can create B-modes. However, \todo{New asgari et al. comes here as soon as it is on arxiv}\citet{2018arXiv181002353A} measured the B-modes of the KV450 survey in the same $\theta$-range. Those B-modes are greater than the ones created by varying depth by a factor of approx.~$50$ and show a completely different pattern, so it is safe to say that the B-modes in the KV450 survey are not created by varying depth. An interesting observation is that the change in E-modes is as big as the created B-modes (compare Fig.~\ref{fig:bmodes_cosebi}). This means that as soon as this effect causes a significant bias in the cosmological parameters, it will also create significant B-modes\footnote{While this is no big surprise, it is not trivial. It could be possible that a systematic effect only creates E-modes and no B-modes, which would be extremely unfortunate as it could bias cosmological parameters without ever being detected by a B-mode analysis.}. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey.
 
 For next-generation surveys like Euclid, this effect will be significant. Although Euclid is a space-based telescope, the photometric redshift determination will still be done by ground-based telescopes and therefore suffer from the same effects. While we did not yet perform a quantitative study of this effect for Euclid, we are certain that a such a study should be conducted.
 
@@ -390,6 +397,7 @@ We want to thank Jan-Luca van den Busch for his permission to use and modify his
 \bibliographystyle{aa}
 \bibliography{cite}
 \begin{appendix}
+\onecolumn
 \section{Detailed Calculations}
 \subsection{Calculation of the power spectrum}
 In this Section we will perform the calculation for the observed power spectrum $P^{\text{obs}}(\b \ell)$. For this, we assume an infinitely large field in order to perform our integration over $\mathbb{R}^2$. In reality, finite field effects would play a role here. We begin with the calculation of the correlation for the Fourier transformed shear:
@@ -611,7 +619,7 @@ E_{01}(\theta) = & \begin{cases}
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.8\textwidth]{images/eab.pdf}
+\includegraphics[width = 0.6\linewidth]{images/eab.pdf}
 \caption{The functions $E_{ab}(\theta)$ for the first few possible combinations.}
 \label{fig:eab}
 \end{figure}
@@ -619,7 +627,7 @@ Naturally, to calculate those functions for all possible combinations would be r
 
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{images/finite_footprint.pdf}
+\includegraphics[width=0.8\linewidth]{images/finite_footprint.pdf}
 \caption{$2\sigma$-contours of the corrections for the correlation functions for a $100\,\rm{deg}^2$ field (blue), a $450\,\rm{deg}^2$ field (red) and a $1000\,\rm{deg}^2$ field (green).}
 \label{fig:finite_footprint}
 \end{figure}
@@ -630,7 +638,7 @@ We sampled several realizations of a random depth-distribution for a $100\,\rm{d
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=\textwidth]{images/compare_cosmos.pdf}
+\includegraphics[width=0.8\linewidth]{images/compare_cosmos.pdf}
 \caption{Correction to the correlation functions in varying cosmologies. Depicted here are three flat sample cosmologies, where values within the 98\% CL of the KV450 survey were sampled.}
 \label{fig:comparecosmo}
 \end{figure}
