applied peter's suggestions

--- a/cite.bib
+++ b/cite.bib
@@ -141,6 +141,28 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  year = {2006}
 }
 
+@article{2009A&A...497..677K,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2009A&A...497..677K},
+ archiveprefix = {arXiv},
+ author = {{Kilbinger}, M. and {Benabed}, K. and {Guy}, J. and {Astier}, P. and
+{Tereno}, I. and {Fu}, L. and {Wraith}, D. and {Coupon}, J. and
+{Mellier}, Y. and {Balland}, C. and {Bouchet}, F.~R. and {Hamana}, T. and
+{Hardin}, D. and {McCracken}, H.~J. and {Pain}, R. and {Regnault}, N. and
+{Schultheis}, M. and {Yahagi}, H.},
+ doi = {10.1051/0004-6361/200811247},
+ eprint = {0810.5129},
+ journal = {\aap},
+ keywords = {cosmology: observations, cosmology: cosmological parameters, methods: statistical, Astrophysics},
+ month = {Apr},
+ number = {3},
+ pages = {677-688},
+ primaryclass = {astro-ph},
+ title = {{Dark-energy constraints and correlations with systematics from CFHTLS weak lensing, SNLS supernovae Ia and WMAP5}},
+ volume = {497},
+ year = {2009}
+}
+
 @article{2010A&A...520A.116S,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2010A&A...520A.116S},
@@ -483,17 +505,19 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
 
 @article{2019arXiv190207439B,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
- adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190207439B},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.489..153B},
  archiveprefix = {arXiv},
  author = {{Blake}, Chris},
- eid = {arXiv:1902.07439},
+ doi = {10.1093/mnras/stz2145},
  eprint = {1902.07439},
- journal = {arXiv e-prints},
- keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
- month = {Feb},
- pages = {arXiv:1902.07439},
+ journal = {\mnras},
+ keywords = {methods: statistical, surveys, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Oct},
+ number = {1},
+ pages = {153-167},
  primaryclass = {astro-ph.CO},
  title = {{Power spectrum modelling of galaxy and radio intensity maps including observational effects}},
+ volume = {489},
  year = {2019}
 }
 
