--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -358,7 +358,7 @@ An additional difference between the models and simulations is that in the model
 
 As the next step we want to assess how the observational depth variations propagate to cosmological parameters inferred from $\xi_\pm^{ij,\rm{obs}}$ compared to $\xi_\pm^{ij}$. For this test we choose the best fit values from H17 as our a fiducial cosmology $\b \Phi$ and determine the relative change in $\Omega_{\rm m}$ and $\sigma_8$ compared to a reference setup with uniform depth. All other cosmological parameters we keep fixed. First, we compute the reference correlation functions $\xi_\pm^{ij}(\theta,\b\Phi)$ for each pair of redshift bins $i,j$ using the \textsc{Nicaea}-code \citep{2009A&A...497..677K} as described in section~\ref{sec:xipm_semianalytic}. Then we derive the observed correlation functions $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ from Eq.~(\ref{eq:correctionfunction2}) and compute the $\chi^2$ between these and $\xi_\pm^{ij}(\theta,\b\Phi)$ using the data covariance-matrix computed in H18. The last step we repeat in a Markov-Chain Monte Carlo simulation to find the cosmology $\b \Phi^\mathrm{obs}$ that minimizes the $\chi^2$ and gives us an estimate of the shift in $\Omega_{\rm m}$ and $\sigma_8$ introduced by varying depth.
 
-As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. As can be seen in Fig.~\ref{fig:mcmc_results}, here the impact on both $\Omega_{\rm m}$ and $\sigma_8$ is significant at the level of approx.~$1\sigma$. Conveniently it seems that the parameter $S_8$ is considerably more robust against this effect.
+As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. Here, the impact on both $\Omega_{\rm m}$ and $\sigma_8$ is significant at the level of approximately $1\sigma$. Conveniently it seems that the parameter $S_8$ is considerably more robust against this effect.
 
 Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependence on the cosmology, which can be seen in Figure \ref{fig:comparecosmo}.
 
