added marikas changes

--- a/cite.bib
+++ b/cite.bib
@@ -301,6 +301,26 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  year = {2016}
 }
 
+@article{2017MNRAS.464.1676A,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.464.1676A},
+ archiveprefix = {arXiv},
+ author = {{Asgari}, Marika and {Heymans}, Catherine and {Blake}, Chris and
+{Harnois-Deraps}, Joachim and {Schneider}, Peter and
+{Van Waerbeke}, Ludovic},
+ doi = {10.1093/mnras/stw2436},
+ eprint = {1601.00115},
+ journal = {\mnras},
+ keywords = {gravitational lensing: weak, methods: data analysis, cosmology: observations, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Jan},
+ number = {2},
+ pages = {1676-1692},
+ primaryclass = {astro-ph.CO},
+ title = {{Revisiting CFHTLenS cosmic shear: optimal E/B mode decomposition using COSEBIs and compressed COSEBIs}},
+ volume = {464},
+ year = {2017}
+}
+
 @article{2017MNRAS.465.1454H,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.465.1454H},
@@ -484,6 +504,25 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  year = {2018}
 }
 
+@article{2019arXiv190103686S,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190103686S},
+ archiveprefix = {arXiv},
+ author = {{Spurio Mancini}, Alessio and {K{\"o}hlinger}, Fabian and
+{Joachimi}, Benjamin and {Pettorino}, Valeria and
+{Sch{\"a}fer}, Bj{\"o}rn Malte and {Reischke}, Robert and
+{Brieden}, Samuel and {Archidiacono}, Maria and {Lesgourgues}, Julien},
+ eid = {arXiv:1901.03686},
+ eprint = {1901.03686},
+ journal = {arXiv e-prints},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Jan},
+ pages = {arXiv:1901.03686},
+ primaryclass = {astro-ph.CO},
+ title = {{KiDS+GAMA: Constraints on Horndeski gravity from combined large-scale structure probes}},
+ year = {2019}
+}
+
 @article{2019arXiv190109488S,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.486...52S},
@@ -518,6 +557,43 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  primaryclass = {astro-ph.CO},
  title = {{Power spectrum modelling of galaxy and radio intensity maps including observational effects}},
  volume = {489},
+ year = {2019}
+}
+
+@article{2019arXiv190911006T,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190911006T},
+ archiveprefix = {arXiv},
+ author = {{Tr{\"o}ster}, Tilman and {S{\'a}nchez}, Ariel. G. and {Asgari}, Marika and
+{Blake}, Chris and {Crocce}, Mart{\'\i}n and {Heymans}, Catherine and
+{Hildebrandt}, Hendrik and {Joachimi}, Benjamin and {Joudaki}, Shahab and
+{Kannawadi}, Arun and {Lin}, Chieh-An and {Wright}, Angus},
+ eid = {arXiv:1909.11006},
+ eprint = {1909.11006},
+ journal = {arXiv e-prints},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Sep},
+ pages = {arXiv:1909.11006},
+ primaryclass = {astro-ph.CO},
+ title = {{Cosmology from large-scale structure: Constraining $\Lambda$CDM with BOSS}},
+ year = {2019}
+}
+
+@article{2019MNRAS.484L..59A,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.484L..59A},
+ archiveprefix = {arXiv},
+ author = {{Asgari}, Marika and {Heymans}, Catherine},
+ doi = {10.1093/mnrasl/slz006},
+ eprint = {1811.10596},
+ journal = {\mnras},
+ keywords = {Gravitational lensing: weak, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Mar},
+ number = {1},
+ pages = {L59-L63},
+ primaryclass = {astro-ph.CO},
+ title = {{Dark Energy Survey Year 1: An independent E/B-mode cosmic shear analysis}},
+ volume = {484},
  year = {2019}
 }
 
