added link to paper in abstract

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -1,4 +1,5 @@
 \documentclass{aa}  
+\usepackage{hyperref}
 
 
 \renewcommand{\rm}{\mathrm}
@@ -30,6 +31,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{txfonts}
 \usepackage{subcaption}
+%\usepackage{hyperref}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\usepackage[options]{hyperref}
@@ -72,16 +74,11 @@ Department of Physics and Astronomy, University College London, Gower Street, Lo
    \date{Received XXX; accepted XXX}
 
   \abstract
-% context (optional)
    {Cosmic shear proves to be a powerful tool to study the properties of the Universe. The discrepancy in the parameter $S_8 = \sigma_8\sqrt{\Omega_{\rm{m}}/0.3}$ between measurements in the local Universe and the cosmic microwave background motivates further investigation of yet unaccounted systematic biases. 
-% aims
    Ground-based surveys are subject to a variation in depth caused by varying atmospheric conditions; we investigate and quantify the resulting effects. In particular, we check whether they introduce a bias to the resulting cosmological parameters and if they can be responsible for the occurrence of B-modes.
-% methods
    We construct a semi-analytic model to estimate the impact on the shear correlation functions and analyse the implications for cosmological parameters. Furthermore, we construct COSEBIs from the correlation functions to quantify the occurring B-modes.
-% results
    For the Kilo-Degree Survey this effect introduces an error in $\xi_\pm$ of the order of a few percent on small scales. We find that the resulting bias in $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ will be significant in next-generation cosmic shear surveys. We find that the dependence of this effect on the underlying cosmology is not negligible. We also report the occurrence of B-modes, although at a not yet significant level.
-% conclusions (optional)
-   We conclude that the effects of varying depth for current cosmic shear surveys on cosmological parameters are not yet significant, but should be accounted for in next-generation experiments.}
+   We conclude that the effects of varying depth for current cosmic shear surveys on cosmological parameters are not yet significant, but should be accounted for in next-generation experiments. \textcolor{blue}{\href{https://docs.google.com/document/d/13j7fUE8jrK5HOVbf4p0HdQs6c14jbWtm9Yq8CtLZCK4/edit?usp=sharing}{[Link to the current google doc]}}}
 
    \keywords{gravitational lensing --
                 weak lensing --
