added some acknowledgements

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -388,7 +388,13 @@ Additionally, it is interesting to note that $E(\theta)$ is the azimuthal averag
 
 
 \begin{acknowledgements}
-I feel like something should be put here.
+The KV450 results in this paper are based on data products from observations
+made with ESO Telescopes at the La Silla Paranal Observatory under programme
+IDs 177.A-3016, 177.A-3017 and 177.A-3018, and on data products produced by
+Target/OmegaCEN, INAF-OACN, INAF-OAPD and the KiDS production team,
+on behalf of the KiDS consortium.
+\\
+This research has made use of NASA's Astrophysics Data System and adstex (\url{https://github.com/yymao/adstex}).
 \end{acknowledgements}
 
 
