added some acknowledgements

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -394,6 +394,8 @@ IDs 177.A-3016, 177.A-3017 and 177.A-3018, and on data products produced by
 Target/OmegaCEN, INAF-OACN, INAF-OAPD and the KiDS production team,
 on behalf of the KiDS consortium.
 \\
+\emph{Author contributions:} All authors contributed to the development and writing of this paper. The authorship list is given in two groups: the lead authors (SH, PS, HHi) followed by key contributors to either the scientific analysis or the data products.
+\\
 This research has made use of NASA's Astrophysics Data System and adstex (\url{https://github.com/yymao/adstex}).
 \end{acknowledgements}
 
